Fix colour contrast of homepage badges

--- a/client/src/home/home.scss
+++ b/client/src/home/home.scss
@@ -105,7 +105,7 @@ li.list-group-item--home {
 }
 
 .badge.badge--is-new {
-  background-color: $highlightColor; 
+  background-color: darken($highlightColor, 5%); 
   color: $textLightColor;
   font-size: 16px;
 }
